<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ingredient"
        android:icon="@drawable/ic_ingredient"
        android:title="Ingredient Storage" />
    <item
        android:id="@+id/shoppingList"
        android:icon="@drawable/ic_shopping"
        android:title="Shopping List" />
    <item
        android:id="@+id/recipes"
        android:icon="@drawable/ic_recipe"
        android:title="Recipes" />
    <item
        android:id="@+id/mealPlan"
        android:icon="@drawable/ic_plan"
        android:title="Meal Plan" />


</menu>