<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"

        android:background="@color/white"
        android:elevation="1dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_ca"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:text="Please select a date to view the plan" />
        <ImageView
            android:id="@+id/iv_copy"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_baseline_file_copy_24"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_title"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        app:srcCompat="@drawable/ic_baseline_add_24" />
</RelativeLayout>